--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
