--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cloudinary": "^1.35.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.1",
     "mongoose": "^7.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-vibrant": "^3.2.1-alpha.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
