--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "node-vibrant": "^3.2.1-alpha.1",
+    "redis": "^4.6.5",
     "request": "^2.88.2"
   },
   "devDependencies": {
